--- a/09-06-intesection-e-union/package.json
+++ b/09-06-intesection-e-union/package.json
@@ -2,9 +2,10 @@
   "dependencies": {
     "typescript": "^5.3.2"
   },
-  "name": "tipandoobjetos",
+  "name": "intesectioneunion",
   "version": "1.0.0",
   "main": "index.js",
+  "devDependencies": {},
   "scripts": {
     "build": "tsc"
   },
